--- a/tg-bot/package.json
+++ b/tg-bot/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.65.1"
   }
