Move JWT-related properties from JwtProvider class to application.yml

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,5 +10,8 @@ spring:
     request-matchers:
       permit-all: >
         POST /login/telegram
+    jwt:
+      secret:
+      expiration-time-millis: 604800000
 server:
   port: 8081
