--- a/tg-bot/package.json
+++ b/tg-bot/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.21",
     "@types/node-telegram-bot-api": "^0.64.6",
+    "express": "^4.19.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
